Finished except for header spacing issue and organizational improvements

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -29,6 +29,10 @@ header {
 	height: 50px;
 }
 
+nav {
+	padding-right: 10px;
+}
+
 nav span{
 	display: inline-block;
 	padding: 20px 10px;
@@ -40,7 +44,7 @@ a {
 }
 
 .main-content {
-	padding-top: 69px;
+	padding-top: 70px;
 	position: relative;
 }
 
@@ -50,11 +54,16 @@ a {
 	background-image: url(../images/mission-background.jpg);
 	height: 700px;
 	width: 1200px;
+	margin: auto;
 }
 
 #mission-text {
 	width: 100%;
 	background-color: black;
+}
+
+#monthly {
+	padding-top: 70px;
 }
 
 #tea-selections {
@@ -81,4 +90,29 @@ a {
 #locations {
 	background-image: url(../images/locations-background.jpg);
 	height: 500px;
+	width: 1200px;
+	margin: auto;
+	padding-top: 70px;
+}
+
+#location-list {
+	display: flex;
+	flex-wrap: wrap;
+	align-items: center;
+	justify-content: center;
+}
+
+.location {
+	width: 300px;
+	background-color: black;
+	justify-content: center;
+	margin: 15px 20px;
+}
+
+#contact {
+	height: 200px;
+}
+
+footer {
+	text-align: left;
 }
